Introdotta validazione dei secrets utilizzati nelle token policy